<resources>
    <string name="app_name">Brick Collector</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string-array name="drawer_array_State_Login">
        <item>Browse</item>
        <item>Sets I own</item>
        <item>Sets I want</item>
        <item>Logout</item>
        <item>Settings</item>
    </string-array>
    <string-array name="drawer_array_State_Logout">
        <item>Browse</item>
        <item>Login</item>
        <item>Register</item>
        <item>Settings</item>
    </string-array>

    <string name="title_activity_browse">BrowseActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_main">MainActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- browse fragment -->
    <string name="lblQuery">Query</string>
    <string name="lblTheme">Theme</string>
    <string name="lblYear">Year</string>
    <string name="lblGo">Go!</string>
    <string name="pieces">Pieces</string>
    <string name="title_activity_list_online_fetched_sets">Found Sets</string>
    <string name="title_activity_detail_sets">Set details</string>
    <string name="detail_rating">Rating:</string>
    <string name="detail_name">Name:</string>
    <string name="detail_number">Number (Variant number):</string>
    <string name="detail_theme">Theme:</string>
    <string name="detail_subtheme">Subtheme:</string>
    <string name="detail_year">Year:</string>
    <string name="detail_pieces">Pieces:</string>
    <string name="detail_minifigs">Minifigs:</string>
    <string name="detail_packagingtype">Packaging type:</string>
    <string name="detail_availability">Availability:</string>
    <string name="detail_reviewcount">Review count:</string>
    <string name="detail_price_uk">Retail price (United Kingdom):</string>
    <string name="detail_price_us">Retail price (United States of America):</string>
    <string name="detail_price_eu">Retail price (European Union):</string>
    <string name="detail_price_ca">Retail price (Canada):</string>
    <string name="detail_price_ca_abbr">CAD</string>
    <string name="detail_price_uk_abbr">GBP</string>
    <string name="detail_price_us_abbr">USD</string>
    <string name="detail_price_eu_abbr">EUR</string>
    <string name="lblUser">Username</string>
    <string name="lblPassword">Password</string>
    <string name="lblLogin">Login</string>
    <string name="chbx_detail_own_text">Put on my own-list</string>
    <string name="lbl_detail_own">I own this set</string>
    <string name="lbl_detail_wish">I want this set</string>
    <string name="chbx_detail_wish_text">Put on my wishlist</string>
    <string name="logout_toast">Successfully logged out!</string>
    <string name="stop">Stop</string>
    <string name="noMoreDataToLoad">No more data to load.</string>
    <string name="notConnected">Not connected.</string>
    <string name="couldNotLoadRegisterPage">Sorry, could not load Register page</string>
    <string name="cancelled">Cancelled</string>
    <string name="lblPageSize">Page size</string>
    <string name="lblSave">Save</string>
    <string name="lblKeepLogin">Keep login</string>
    <string name="errorSettingsPageSize">PageSize has to be between 1 and 100!</string>
    <string name="successSettings">Settings saved</string>
    <string name="couldNotLoadPageSize">Could not set Pagesize.</string>
    <string name="save">Save</string>
</resources>
